# ds-esa9

./: Linear Regression.ipynb  pyproject.toml
.ipynb_checkpoints/: Logistic Regression-checkpoint.ipynb
data/: videogames.csv
