[tool.poetry]
name = "ds-esa9"
version = "0.1.0"
description = ""
authors = ["erdeanmich <erdeanlinda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
